fixed overflow issue in references container, connect isShowingRefForm to redux

--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -14,12 +14,13 @@
     padding: 10px;
 }
 
-#resources-view {
+#reference-form {
+    padding: 5px 10px;
     overflow-y: scroll;
 }
 
 #resources-container {
-    grid-auto-rows: min-content;
+    grid-template-rows: min-content auto;
     grid-row: 1 / 3;
     grid-column: 2 / 3;
     display: grid;
